# polars-go

./: README.md  go.mod  go.sum  main.go
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
bridge/: bridge_test.go  loader_unix.go  loader_win.go
docs/: CHANGELOG.md  python-polars-comparison.md  tomaps-profiling.md
examples/: scan_csv_example.go
examples/scan_csv/: main.go
examples/struct_roundtrip/: main.go
polars/: array_export.go  array_export_test.go  arrow_export_support_cgo.go  arrow_export_support_nocgo.go  arrow_import_test.go  arrow_path_support_cgo.go  arrow_path_support_nocgo.go  arrow_record_export_cgo.go  arrow_record_export_nocgo.go  arrow_zero_copy_helpers_cgo_test.go  arrow_zero_copy_helpers_nocgo_test.go  benchmark_test.go  bridge_resolve.go  collect_helpers_test.go  conversion_helpers_test.go  dataframe.go  dataframe_arrow_cgo.go  dataframe_arrow_nocgo.go  dataframe_construction_test.go  dataframe_handle.go  dataframe_map.go  dataframe_rows.go  describe.go  errors.go  excel.go  execution.go  execution_options_test.go  export_test.go  expr.go  expr_list.go  expr_mapbatches_bridge_cgo.go  expr_mapbatches_bridge_nocgo.go  expr_mapbatches_registry.go  expr_str.go  expr_temporal.go  frame.go  import_options.go  json_export.go  lifecycle_test.go  map_batches_test.go  (+19 more)
proto/: polars_bridge.pb.go  polars_bridge.proto
rust/: Cargo.toml  build.rs
rust/src/: arrow_bridge.rs  error.rs  executor.rs  expr_list.rs  expr_str.rs  expr_temporal.rs  lib.rs  rows_import.rs
scripts/: build.sh  compare_go_polars.go  compare_memory_with_python_polars.sh  compare_python_polars.py  compare_with_python_polars.sh  test.sh
